Content Changes and Template Updates

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -18,10 +18,10 @@ import SocialIcons from './SocialIcons.astro'
         <Separator orientation="vertical" className="h-4" />
         <p class="text-center text-sm text-muted-foreground">
           Made with 🤍 by <Link
-            href="https://github.com/jktrn"
+            href="https://www.instagram.com/hokori.otaku/"
             class="text-foreground"
             external
-            underline>enscribe</Link
+            underline>Hokori</Link
           >!
         </p>
       </div>
