--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -30,19 +30,19 @@ const authors = await parseAuthors(entry.data.authors ?? [])
   >
     {
       entry.data.image && (
-        <div class="max-w-[200px] sm:flex-shrink-0">
+        <div class="w-full overflow-hidden rounded-xl sm:flex-shrink-0 md:max-w-[200px]">
           <Image
             src={entry.data.image}
             alt={entry.data.title}
             width={1200}
             height={630}
-            class="object-cover"
+            class="h-full w-full object-cover"
           />
         </div>
       )
     }
     <div class="flex-grow">
-      <h3 class="mb-1 text-lg font-semibold">
+      <h3 class="mb-1 font-instument text-2xl font-semibold text-rose-500">
         {entry.data.title}
       </h3>
       <p class="mb-2 text-sm text-muted-foreground">
