--- a/src/pages/blog/[...id].astro
+++ b/src/pages/blog/[...id].astro
@@ -76,13 +76,15 @@ const authors = await parseAuthors(post.data.authors ?? [])
           alt={post.data.title}
           width={1200}
           height={630}
-          class="col-span-full mx-auto w-full max-w-[1000px] object-cover"
+          class="col-span-full mx-auto w-full max-w-[1000px] overflow-hidden rounded-2xl"
         />
       )
     }
     <section class="col-start-2 flex flex-col gap-y-6 text-center">
       <div class="flex flex-col gap-y-4">
-        <h1 class="text-4xl font-bold leading-tight sm:text-5xl">
+        <h1
+          class="font-instument text-4xl font-bold italic tracking-tighter sm:text-5xl"
+        >
           {post.data.title}
         </h1>
 
@@ -191,7 +193,7 @@ const authors = await parseAuthors(post.data.authors ?? [])
 
           scrollToTopButton.classList.toggle(
             'hidden',
-            window.scrollY <= 300 || isFooterVisible,
+            window.scrollY <= 300 || isFooterVisible
           )
         })
       }
