--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -83,7 +85,7 @@
 
 @layer components {
   article {
-    @apply prose-headings:scroll-mt-20 prose-headings:break-words first:prose-headings:mt-0 prose-p:break-words prose-a:!break-words prose-a:!decoration-muted-foreground prose-a:underline-offset-[3px] prose-a:transition-colors hover:prose-a:!decoration-foreground prose-pre:!px-0 prose-img:mx-auto;
+    @apply prose prose-headings:scroll-mt-20 prose-headings:break-words prose-headings:font-instument prose-headings:italic first:prose-headings:mt-0 prose-h2:text-rose-500 prose-p:break-words prose-a:!break-words prose-a:text-rose-500 prose-a:!decoration-muted-foreground prose-a:underline-offset-[3px] prose-a:transition-colors hover:prose-a:!decoration-foreground prose-pre:!px-0 prose-img:mx-auto;
 
     .katex-display {
       @apply overflow-x-auto overflow-y-hidden py-4;
@@ -187,5 +189,22 @@
         }
       }
     }
+  }
+}
+
+body {
+  position: relative;
+
+  &::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: url('/noise.51a05f55.png');
+    top: 0;
+    left: 0;
+    opacity: 0.5;
+    z-index: 111;
+    pointer-events: none;
   }
 }
