--- a/src/components/SocialIcons.astro
+++ b/src/components/SocialIcons.astro
@@ -17,6 +17,7 @@ const iconMap = {
   GitHub: 'lucide:github',
   LinkedIn: 'lucide:linkedin',
   Twitter: 'lucide:twitter',
+  Instagram: 'lucide:instagram',
   Email: 'lucide:mail',
   RSS: 'lucide:rss',
 }
