--- a/src/pages/blog/[...id].astro
+++ b/src/pages/blog/[...id].astro
@@ -83,7 +83,7 @@ const authors = await parseAuthors(post.data.authors ?? [])
     <section class="col-start-2 flex flex-col gap-y-6 text-center">
       <div class="flex flex-col gap-y-4">
         <h1
-          class="font-instument text-4xl font-bold italic tracking-tighter sm:text-5xl"
+          class="font-instument text-4xl font-bold italic tracking-tight text-red-500 sm:text-5xl"
         >
           {post.data.title}
         </h1>
@@ -155,7 +155,7 @@ const authors = await parseAuthors(post.data.authors ?? [])
     {headings.length > 0 && <TableOfContents headings={headings} />}
 
     <article
-      class="prose prose-neutral col-start-2 max-w-none dark:prose-invert"
+      class="prose prose-lg col-start-2 max-w-none dark:prose-invert prose-headings:tracking-normal prose-headings:text-red-500"
     >
       <Content />
     </article>
