--- a/src/pages/blog/[...id].astro
+++ b/src/pages/blog/[...id].astro
@@ -155,7 +155,7 @@ const authors = await parseAuthors(post.data.authors ?? [])
     {headings.length > 0 && <TableOfContents headings={headings} />}
 
     <article
-      class="prose prose-lg col-start-2 max-w-none dark:prose-invert prose-headings:tracking-normal prose-headings:text-red-500"
+      class="prose prose-lg col-start-2 max-w-none dark:prose-invert prose-headings:font-black prose-headings:leading-none prose-headings:tracking-tighter prose-headings:text-red-500 prose-p:font-medium prose-p:leading-relaxed"
     >
       <Content />
 
