--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,47 +1,33 @@
 ---
+import '@/styles/global.css'
+import '@/styles/typography.css'
+
 import Footer from '@/components/Footer.astro'
 import Head from '@/components/Head.astro'
 import Header from '@/components/Header.astro'
 import { SITE } from '@/consts'
+import { cn } from '@/lib/utils'
 
-type Props = {
-  title: string
-  description: string
-  image?: string
-}
-
-const { title, description, image } = Astro.props
+const { isWide = false } = Astro.props
 ---
 
 <!doctype html>
-<html lang="en">
-  <head>
-    <Head
-      title={`${title} | ${SITE.TITLE}`}
-      description={description}
-      image={image}
-    />
-
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NY9RRMQG2K"
-    ></script>
-    <script lang="js">
-      window.dataLayer = window.dataLayer || []
-      function gtag() {
-        dataLayer.push(arguments)
-      }
-      gtag('js', new Date())
-
-      gtag('config', 'G-NY9RRMQG2K')
-    </script>
-  </head>
+<html lang={SITE.locale}>
+  <Head>
+    <slot name="head" />
+  </Head>
   <body>
-    <div
-      class="box-border flex h-fit min-h-screen flex-col gap-y-6 font-sans antialiased"
-    >
+    <div class="flex h-fit min-h-screen flex-col gap-y-6 font-sans">
       <Header />
-      <main class="flex-grow">
-        <slot />
+      <main class="grow">
+        <div
+          class={cn(
+            'mx-auto flex grow flex-col gap-y-6 px-4',
+            !isWide && 'max-w-3xl'
+          )}
+        >
+          <slot />
+        </div>
       </main>
       <Footer />
     </div>
