--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -8,7 +8,7 @@ import Layout from '@/layouts/Layout.astro'
 import { cn } from '@/lib/utils'
 ---
 
-<Layout title="404" description={SITE.DESCRIPTION}>
+<Layout title="404" description={SITE.description}>
   <Container class="flex grow flex-col gap-y-6">
     <Breadcrumbs items={[{ label: '???', icon: 'lucide:circle-help' }]} />
 
@@ -25,7 +25,7 @@ import { cn } from '@/lib/utils'
         href="/"
         class={cn(
           buttonVariants({ variant: 'outline' }),
-          'flex gap-x-1.5 group',
+          'flex gap-x-1.5 group'
         )}
       >
         <span class="transition-transform group-hover:-translate-x-1"
