--- a/src/components/SocialIcons.astro
+++ b/src/components/SocialIcons.astro
@@ -1,8 +1,8 @@
 ---
 import Link from '@/components/Link.astro'
 import { buttonVariants } from '@/components/ui/button'
-import type { Link as SocialLink } from '@/consts'
 import { cn } from '@/lib/utils'
+import type { SocialLink } from '@/types'
 import { Icon } from 'astro-icon/components'
 
 interface Props {
