--- a/src/pages/authors/[...id].astro
+++ b/src/pages/authors/[...id].astro
@@ -2,7 +2,6 @@
 import AuthorCard from '@/components/AuthorCard.astro'
 import BlogCard from '@/components/BlogCard.astro'
 import Breadcrumbs from '@/components/Breadcrumbs.astro'
-import Container from '@/components/Container.astro'
 import Layout from '@/layouts/Layout.astro'
 import { type CollectionEntry, getCollection } from 'astro:content'
 
@@ -32,34 +31,34 @@ const authorPosts = allPosts
   title={`${author.data.name} (Author)`}
   description={author.data.bio || `Profile of ${author.data.name}.`}
 >
-  <Container class="flex flex-col gap-y-6">
-    <Breadcrumbs
-      items={[
-        { href: '/authors', label: 'Authors', icon: 'lucide:users' },
-        { label: author.data.name, icon: 'lucide:user' },
-      ]}
-    />
+  <Breadcrumbs
+    items={[
+      { href: '/authors', label: 'Authors', icon: 'lucide:users' },
+      { label: author.data.name, icon: 'lucide:user' },
+    ]}
+  />
 
-    <section>
-      <AuthorCard author={author} linkDisabled />
-    </section>
-    <section class="flex flex-col gap-y-4">
-      <h2 class="text-2xl font-semibold">Posts by {author.data.name}</h2>
-      {
-        authorPosts.length > 0 ? (
-          <ul class="not-prose flex flex-col gap-4">
-            {authorPosts.map((post) => (
-              <li>
-                <BlogCard entry={post} />
-              </li>
-            ))}
-          </ul>
-        ) : (
-          <p class="text-muted-foreground">
-            No posts available from this author.
-          </p>
-        )
-      }
-    </section>
-  </Container>
+  <section>
+    <AuthorCard author={author} linkDisabled />
+  </section>
+  <section class="flex flex-col gap-y-4">
+    <h2 class="text-2xl font-semibold">
+      Posts by <span class="font-instrument">{author.data.name}</span>
+    </h2>
+    {
+      authorPosts.length > 0 ? (
+        <ul class="not-prose flex flex-col gap-4">
+          {authorPosts.map((post) => (
+            <li>
+              <BlogCard entry={post} />
+            </li>
+          ))}
+        </ul>
+      ) : (
+        <p class="text-muted-foreground">
+          No posts available from this author.
+        </p>
+      )
+    }
+  </section>
 </Layout>
