--- a/src/components/BlogCard1.astro
+++ b/src/components/BlogCard1.astro
@@ -1,6 +1,5 @@
 ---
 import AvatarComponent from '@/components/ui/avatar'
-import { Badge } from '@/components/ui/badge'
 import { Separator } from '@/components/ui/separator'
 import { parseAuthors } from '@/lib/server-utils'
 import { formatDate, readingTime } from '@/lib/utils'
@@ -22,15 +21,15 @@ const authors = await parseAuthors(entry.data.authors ?? [])
 ---
 
 <div
-  class="not-prose rounded-xl border p-4 transition-colors duration-300 ease-in-out hover:bg-secondary/50"
+  class="not-prose hover:bg-secondary/50 h-full rounded-xl border p-4 transition-colors duration-300 ease-in-out"
 >
   <Link
     href={`/${entry.collection}/${entry.id}`}
-    class="flex flex-col gap-4 sm:flex-row"
+    class="flex h-full flex-col gap-4"
   >
     {
       entry.data.image && (
-        <div class="w-full overflow-hidden rounded-xl sm:flex-shrink-0 md:max-w-[200px]">
+        <div class="w-full overflow-hidden rounded-xl sm:flex-shrink-0 md:max-w-full">
           <Image
             src={entry.data.image}
             alt={entry.data.title}
@@ -41,15 +40,15 @@ const authors = await parseAuthors(entry.data.authors ?? [])
         </div>
       )
     }
-    <div class="flex-grow">
-      <h3 class="mb-1 font-instument text-2xl font-semibold text-rose-500">
+    <div class="flex flex-1 flex-grow flex-col">
+      <h3 class="font-instrument mb-1 text-2xl font-semibold text-red-500">
         {entry.data.title}
       </h3>
-      <p class="mb-2 text-sm text-muted-foreground">
+      <p class="text-muted-foreground mb-2 flex-1 text-sm">
         {entry.data.description}
       </p>
       <div
-        class="mb-2 flex flex-wrap items-center gap-x-2 text-xs text-muted-foreground"
+        class="text-muted-foreground mb-2 flex flex-wrap items-center gap-x-2 text-xs"
       >
         {
           authors.length > 0 && (
@@ -74,15 +73,6 @@ const authors = await parseAuthors(entry.data.authors ?? [])
         <Separator orientation="vertical" className="h-4" />
         <span>{readTime}</span>
       </div>
-      {
-        entry.data.tags && (
-          <div class="flex flex-wrap gap-2">
-            {entry.data.tags.map((tag) => (
-              <Badge variant="secondary">{tag}</Badge>
-            ))}
-          </div>
-        )
-      }
     </div>
   </Link>
 </div>
