--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,10 @@ import logo from '../../public/static/logo.svg'
   <div
     class="mx-auto flex max-w-3xl flex-wrap items-center justify-between gap-4 p-4"
   >
-    <Link href="/" class="flex shrink-0 items-center gap-2 text-xl font-medium">
+    <Link
+      href="/"
+      class="font-instrument flex shrink-0 items-center gap-2 text-xl font-medium"
+    >
       <Image src={logo} alt="Logo" class="size-8" />
       {SITE.title}
     </Link>
