--- a/src/pages/blog/[...id].astro
+++ b/src/pages/blog/[...id].astro
@@ -54,13 +54,12 @@ const authors = await parseAuthors(post.data.authors ?? [])
       )
     }
     <section class="col-start-2 flex flex-col gap-y-6 text-center">
-      <div class="flex flex-col">
+      <div class="flex flex-col gap-2.5">
         <h1
-          class="font-instrument mb-2 text-5xl leading-[1] font-bold tracking-tighter text-pretty text-red-500"
+          class="font-instrument mb-2 text-4xl leading-[1] font-bold tracking-tight text-pretty text-red-500 md:text-5xl"
         >
           {post.data.title}
         </h1>
-
         <div
           class="text-muted-foreground mb-4 flex flex-wrap items-center justify-center gap-2 text-sm"
         >
