--- a/src/pages/tags/[...id].astro
+++ b/src/pages/tags/[...id].astro
@@ -1,7 +1,6 @@
 ---
 import BlogCard from '@/components/BlogCard.astro'
 import Breadcrumbs from '@/components/Breadcrumbs.astro'
-import Container from '@/components/Container.astro'
 import Layout from '@/layouts/Layout.astro'
 import { Icon } from 'astro-icon/components'
 import { type CollectionEntry, getCollection } from 'astro:content'
@@ -36,35 +35,33 @@ export async function getStaticPaths() {
   title={`Posts tagged with "${tag}"`}
   description={`A collection of posts tagged with ${tag}.`}
 >
-  <Container class="flex flex-col gap-y-6">
-    <Breadcrumbs
-      items={[
-        { href: '/tags', label: 'Tags', icon: 'lucide:tags' },
-        { label: tag, icon: 'lucide:tag' },
-      ]}
-    />
-    <div class="flex flex-wrap items-center gap-2">
-      <h1 class="font-instument text-3xl font-semibold">Posts tagged with</h1>
-      <span
-        class="flex items-center gap-x-1 rounded-full bg-secondary px-4 py-2 font-semibold"
-      >
-        <Icon name="lucide:hash" class="size-6 -translate-x-0.5" />{tag}
-      </span>
-    </div>
-    <div class="flex flex-col gap-y-4">
-      {
-        posts.map((post) => (
-          <section class="flex flex-col gap-y-4">
-            <div>
-              <ul class="not-prose flex flex-col gap-4">
-                <li>
-                  <BlogCard entry={post} />
-                </li>
-              </ul>
-            </div>
-          </section>
-        ))
-      }
-    </div>
-  </Container>
+  <Breadcrumbs
+    items={[
+      { href: '/tags', label: 'Tags', icon: 'lucide:tags' },
+      { label: tag, icon: 'lucide:tag' },
+    ]}
+  />
+  <div class="flex flex-wrap items-center gap-2">
+    <h1 class="font-instument text-3xl font-semibold">Posts tagged with</h1>
+    <span
+      class="bg-secondary flex items-center gap-x-1 rounded-full px-4 py-2 font-semibold"
+    >
+      <Icon name="lucide:hash" class="size-6 -translate-x-0.5" />{tag}
+    </span>
+  </div>
+  <div class="flex flex-col gap-y-4">
+    {
+      posts.map((post) => (
+        <section class="flex flex-col gap-y-4">
+          <div>
+            <ul class="not-prose flex flex-col gap-4">
+              <li>
+                <BlogCard entry={post} />
+              </li>
+            </ul>
+          </div>
+        </section>
+      ))
+    }
+  </div>
 </Layout>
