--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -94,3 +94,18 @@
     @apply transition-none!;
   }
 }
+
+body {
+  &:before {
+    content: '';
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-image: url(https://gauravvala.vercel.app/images/noise.51a05f55.png);
+    top: 0;
+    left: 0;
+    opacity: 0.4;
+    z-index: 1;
+    pointer-events: none;
+  }
+}
