--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -13,7 +13,10 @@ import Favicons from './Favicons.astro'
   />
   <meta name="generator" content={Astro.generator} />
   <meta name="robots" content="index, follow" />
-
+  <meta
+    name="google-site-verification"
+    content="A18JlDIUEGa7KPKjNlgfITGZw72N1xJHQmdiIB1V6yk"
+  />
   <meta name="HandheldFriendly" content="True" />
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
