--- a/src/components/BlogCard1.astro
+++ b/src/components/BlogCard1.astro
@@ -29,7 +29,7 @@ const authors = await parseAuthors(entry.data.authors ?? [])
   >
     {
       entry.data.image && (
-        <div class="w-full overflow-hidden rounded-xl sm:flex-shrink-0 md:max-w-full">
+        <div class="w-full overflow-hidden rounded-xl sm:shrink-0 md:max-w-full">
           <Image
             src={entry.data.image}
             alt={entry.data.title}
@@ -40,7 +40,7 @@ const authors = await parseAuthors(entry.data.authors ?? [])
         </div>
       )
     }
-    <div class="flex flex-1 flex-grow flex-col">
+    <div class="flex flex-1 grow flex-col">
       <h3 class="font-instrument mb-1 text-2xl font-semibold text-red-500">
         {entry.data.title}
       </h3>
